# basic_dev_codes

./: .gitignore  README.md
CMakeDemo/HelloWord/: CMakeLists.txt  build.sh  hello-world.cpp
CMakeDemo/HelloWord/demo/: cmd-dir.cpp
study_for_c/: CMakeLists.txt  README.md
study_for_c/c_from_hello_code/: README.md
study_for_c/c_from_hello_code/10_printf/: 10_printf.sln
study_for_c/c_from_hello_code/11_scanf/: 11_scanf.sln
study_for_c/c_from_hello_code/12_calc-char_express/: 12_calc-char_express.sln
study_for_c/c_from_hello_code/13_type_convert/: 13_type_convert.sln
study_for_c/c_from_hello_code/14_logic/: 14_logic.sln
study_for_c/c_from_hello_code/19_array/: 19_array.sln
study_for_c/c_from_hello_code/21_string_char-array/: 21_string_char-array.sln
study_for_c/c_from_hello_code/22_IO_cache/: 22_IO_cache.sln
study_for_c/c_from_hello_code/37_string_fun/: main.c
study_for_c/c_from_hello_code/38_my_string_fun/: main.c
study_for_c/c_from_hello_code/39_struct_data/: main.c
study_for_c/c_from_hello_code/41_union_enum/: main.c
study_for_c/c_from_hello_code/43_pre_cmd/: main.c  main_2.c
study_for_c/c_from_hello_code/44_typedef/: main.c
study_for_c/c_from_hello_code/45_multi-file_code/: demo  main.c  print.c  print.h
study_for_c/c_from_hello_code/46_multi-file-hard_code/: demo2  main.c  person.c  person.h
study_for_c/c_from_hello_code/49_file/: main.c
study_for_c/c_from_hello_code/52_bit-operation/: main.c
study_for_c/c_from_hello_code/53_dynamic_mem/: main.c
study_for_c/c_from_hello_code/54_main_fun_params/: main.c
study_for_c/c_from_hello_code/Integer/: Integer.sln
study_for_c/c_from_hello_code/float_demo/: float_demo.sln
study_for_c/c_from_hello_code/pointer_part/: readme.md
study_for_c/c_from_hello_code/var_val/: var_val.sln
study_for_c/docs/books/: C_Programming_Language.md  chapter1_preamble.md  chapter2.md  chapter5.md
study_for_c/docs/c_from_hello_code/: bit_operation.md  condition_compile.md  const.md  dynamic_mem.md  file.md  id_scope.md  main_fun_params.md  multi-file-hard_code.md  multi-file_code.md  pre_cmd.md  store_type.md  string_fun.md  struct_data.md  typedef.md  union_enum.md
study_for_c/docs/gcc/: README.md
study_for_c/docs/imooc/: chapter10.md  chapter11.md  chapter12.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md  readme.md
study_for_c/imooc/chapter11/: 04.copy_file_1.c
study_for_c/imooc/chapter9/: util.c
study_for_cpp/: .gitignore  CMakeLists.txt  README.md
study_for_cpp/chapter_1/section_5/: main_5.cpp  sales_info.txt
study_for_cpp/chapter_2/section_2/: main.cpp
study_for_cpp/chapter_2/section_3/: main.cpp
study_for_cpp/chapter_2/section_6/: Sales_data.h  main.cpp
study_for_cpp/chapter_3/section_2/: main.cpp
study_for_cpp/chapter_3/section_4/: main.cpp
study_for_cpp/chapter_3/section_5/: 3.5.1.cpp  3.5.2.cpp  3.5.4.cpp  main_1.cpp
study_for_cpp/chapter_4/: 4.6.cpp  4.9.cpp
study_for_cpp/chapter_6/section_1/: fact.cpp  factMain.cpp  main
study_for_cpp/chapter_6/section_2/: 6.2.1.cpp
study_for_cpp/cpp_primary/chapter_4/: 4.8.cpp  main_6.cpp
study_for_cpp/cpp_primary/chapter_5/: 5.6.cpp
study_for_cpp/doc/CMake/: readme.md
study_for_cpp/doc/chapter_1/: README.md
study_for_cpp/doc/chapter_2/: README.md  section_1.md  section_2.md  section_3.md  section_6.md
study_for_cpp/doc/chapter_3/: section_1.md  section_2-2.md  section_2-3.md  section_2.md  section_3.md  section_3_2.md  section_3_3.md  section_4.md  section_5.md  section_5_3.md  section_5_4.md  section_5_5.md  section_6.md
study_for_cpp/doc/chapter_4/: README.md  section_6.md  section_8.md  section_9.md
study_for_cpp/doc/chapter_5/: section_6.md
study_for_cpp/doc/chapter_6/: README.md  section_1.md  section_2.md  section_6.md  section_7.md
study_for_cpp/doc/chapter_7/: README.md  section_1.md
study_for_cpp/doc/cppThings/: README.md
study_for_cpp/doc/cpp_primary/: readme.md
study_for_cpp/doc/mooc/: readme.md
study_for_cpp/doc/part_2/: readme.md
study_for_cpp/doc/suet/: .12.2-derived-class.md  13.4-std-classes.md  (+58 more)
study_for_cpp/exercise/: readme.md
study_for_cpp/make_file_demo/: Makefile  factorial.cpp  functions.h  main.cpp  readme.md  sayHello.cpp  version_1.md
study_for_cpp/suet/: 1.3_demo.cpp  4.3_demo.cpp  4.4_typedef.cpp  hello.cpp  mul.cpp  mul.h
(+673 files in other folders)
